Testing some tags and JS

--- a/index.html
+++ b/index.html
@@ -6,25 +6,36 @@
 </head>
 <body>
   <style>
+
+  .Test{
+	  align: "center";
+    border: 5px solid black;
+    padding: 25px;
+    margin: 25px;
+  }
+
   </style>
 
   <div align="center">
-  <p>Hello my name is Mike.</p>
+    <p>Hello my name is Mike.</p>
   </div>
 
   <hr/>
+  <div class="Test">
 
-  <div class="Example">
-  <h2>Testing the waters</h2>
-  <h2>Calm as ocean waves!</h2>
+    <div class="Example" align="center">
+      <h2>Testing the waters</h2>
+      <h2>Calm as ocean waves!</h2>
+    </div>
+
+    <p>Testing buttons... </p>
+    <h4> This button will make the first two line's background red!!! </h4>
+    <button onclick = "changeBGColor()"> Push the button! </button>
+    <h4> This button will make the first two line's font blue!!!</h4>
+    <button onclick = "changeFColor()"> Push the button! </button>
+    <br />
   </div>
 
-  <p>Testing buttons... </p>
-  <h4> This button will make the first two line's background red!!! </h4>
-  <button onclick = "changeBGColor()"> Push the button! </button>
-  <h4> This button will make the first two line's font blue!!!</h4>
-  <button onclick = "changeFColor()"> Push the button! </button>
-  <br />
   <p>testing javascript below...</p>
   <br />
 
