--- a/index.html
+++ b/index.html
@@ -1,104 +1,92 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Michael Tighe's Website</title>
-</head>
-<body>
-  <style>
 
-  .Test{
-	  align: "center";
-    border: 5px solid black;
-    padding: 25px;
-    margin: 25px;
-  }
+  <!DOCTYPE html>
+  <html lang ="en">
+    <head>
+      <meta charset="UTF-8">
+      <title>Michael Tighe's Website</title>
 
-  </style>
+      <!--Import Google Icon Font-->
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!--Import materialize.css-->
+      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 
-  <div align="center">
-    <p>Hello my name is Mike.</p>
-  </div>
+      <!--Let browser know website is optimized for mobile-->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <link rel = "stylesheet" href="css\test.css"
+    </head>
 
-  <hr/>
-  <div class="Test">
+    <body>
 
-    <div class="Example" align="center">
-      <h2>Testing the waters</h2>
-      <h2>Calm as ocean waves!</h2>
-    </div>
+      <!-- Navigation -->
 
-    <p>Testing buttons... </p>
-    <h4> This button will make the first two line's background red!!! </h4>
-    <button onclick = "changeBGColor()"> Push the button! </button>
-    <h4> This button will make the first two line's font blue!!!</h4>
-    <button onclick = "changeFColor()"> Push the button! </button>
-    <br />
-  </div>
+      <nav>
+        <div class="nav-wrapper blue darken-2">
+          <a href="#!" class="brand-logo"><span class="logo black-text text-lighten-2">Michael Tighe</span></a>
+          <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="#">About</a></li>
+            <li><a href="#">My Projects</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+          <ul class="side-nav" id="mobile-demo">
+            <li><a href="#">About</a></li>
+            <li><a href="#">My Projects</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
 
-  <p>testing javascript below...</p>
-  <br />
+      <!-- End of Navigation -->
 
-  <script>
+      <!-- Hero -->
 
-  //My variables
-  var x = 20;
-  var y = 15;
+      <div class="parallax-container valign-wrapper">
+        <div class="container">
+          <div class="row">
+            <div class="col l8 s12 white-text">
+              <h4 class="thin-text left-align valign">I'm Michael Tighe, a web developer.
+                Always willing to learn new things & won't give up!</h4>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col l4">
+              <a class="waves-effect btn-large hoverable blue accent-2"> Test Button </a>
+            </div>
+          </div>
+        </div>
+        <div class="parallax"><img src="imgs/Test.jpg"></div>
+      </div>
 
-  //My objects
-  var obj = {
-    a:"Hello World",
-    b:250,
-    c:true
-  };
+      <!-- End of Hero -->
 
-  var Myself = {
-    name:"Mike"
-  };
 
-  //creating an array
-  var arr = [
-    "Hello World",
-    250,
-    true
-  ];
+      <!-- <div align="center">
+        <p>Hello my name is Mike.</p>
+      </div>
 
-  //function definitons
-  function add(){
-    var z=x+y;
-    document.write(z + "<br />");
-  };
+      <hr/> -->
+      <div class="test">
 
-  function printArr(e){
-    document.write(e[0] + "<br />");
-    document.write(e[1]+ "<br />");
-    document.write(e[2] + "<br />");
-  };
+        <div class="Example" align="center">
+          <h2>Testing the waters</h2>
+          <h2>Calm as ocean waves!</h2>
+        </div>
 
-  function identify(){
-    return this.name.toUpperCase();
-  }
+        <p>Testing buttons... </p>
+        <h4> This button will make the first two line's background red!!! </h4>
+        <button class = "btn waves-effect waves-light blue" onclick = "changeBGColor()"> Push the button! </button>
+        <h4> This button will make the first two line's font blue!!!</h4>
+        <button class = "btn waves-effect waves-light blue"onclick = "changeFColor()"> Push the button! </button>
+        <br />
+      </div>
 
-  function speak(){
-    var output = "Hello my name is: " + identify.call(this);
-    console.log(output);
-  }
+      <p>testing javascript below...</p>
+      <br />
 
-  function changeBGColor(){
-    document.querySelector(".Example").style.backgroundColor = "red";
-  }
+      <!--Import jQuery before materialize.js-->
+      <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+      <script type="text/javascript" src="js/materialize.min.js"></script>
+      <script type="text/javascript" src="js\test.js"></script>
 
-  function changeFColor(){
-    document.querySelector(".Example").style.color = "blue";
-  }
-
-  //function calls
-  add();
-  printArr(arr)
-
-  //identify.call(Myself);
-  speak.call(Myself);
-
-  </script>
-</body>
-</html>
+    </body>
+  </html>
