Changed some comments

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       <!-- End of Navigation -->
 
-      <!-- Hero -->
+      <!-- Parallax -->
 
       <div class="parallax-container valign-wrapper">
         <div class="container">
@@ -57,7 +57,7 @@
         <div class="parallax"><img src="imgs/Test.jpg"></div>
       </div>
 
-      <!-- End of Hero -->
+      <!-- End of Parallax -->
 
 
       <!-- <div align="center">
